[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "memtree"
version = "0.1.0"
description = "Render cgroups tree annotated by memory usage"
authors = ["nicoo <nicoo@debian.org>"]
license = "ISC"

[tool.poetry.scripts]
memtree = 'memtree.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13"


[tool.poetry.group.dev.dependencies]
bork = "^7"

[tool.poetry.group.lint.dependencies]
flake8 = "^6"
flake8-commas = "^2.0.0"
flake8-bugbear = "^23"
flake8-import-order = "^0.18.1"
flake8-pyproject = "^1.2.3"
pep8-naming = "^0.13"

[tool.poetry.group.test.dependencies]
pytest = "^7"
hypothesis = "^6.13.5"


[tool.bork.aliases]
lint = "python -m flake8"
test = "python -m pytest -v"

[tool.flake8]
select = "C,E,F,I,N,W,B,B9"
ignore = "E401"
max-line-length = 80

import-order-style = "smarkets"
application-import-names = "memtree"
