[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "memtree"
version = "0.1.0"
description = "Render cgroups tree annotated by memory usage"
authors = ["nicoo <nicoo@debian.org>"]
license = "ISC"

[tool.poetry.scripts]
memtree = 'memtree.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13"


[tool.poetry.group.dev.dependencies]
bork = "^7"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^7"
hypothesis = "^6.13.5"


[tool.bork.aliases]
lint = "ruff check . && ruff format --check --diff ."
test = "python -m pytest -v"

[tool.ruff]
select = [
       "RUF",                # ruff's own rules
       "E", "W",             # pycodestyle
       "F",                  # pyflakes
       "ANN",                # require function annotations
       "ARG",                # unused arguments
       "B", "B9",            # bugbear
       "C4",                 # idiomatic style with comprehensions
       "C90",                # code complexity rules (mccabe)
       "COM",                # commas
       "ERA",                # remove commented-out code
       "I",                  # import order
       "N",                  # naming
       "PERF",               # performance-related rules
       "PGH",                # misc. rules supplanting pygrep-hooks
       "PT",                 # pytest-specific rules
       "PTH",                # use pathlib, you philistine
       "PL",                 # pylint
       "RET",                # control flow around `return`
       "SIM",                # simplification rules
       "SLF",                # don't poke around other classes' privates
       "UP",                 # pyupgrade: warn on obsolete syntax
]
ignore = [
       "ANN101", "ANN102",   # `self` and `cls` have implicit type annotations
       "E401",               # allow multiple imports on one line
       "COM812",             # incompatible with `ruff format`
]
line-length = 80

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
